pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints4.pkl
foo: List(fold(0, (a, b) -> a + b) == 5) = myList

myList = List(1, 2, 3)
